# Bank-project

./: .env  .env.docker  .gitignore  DB_CONNECTION.md  DEVELOPMENT.md  QUICK_START_DOCKER.md  README.md  YANDEX_OAUTH_SETUP.md  docker-compose.dev.yml  docker-compose.yml
diagrams/: 01-class-diagram.puml  02-usecase-diagram.puml  03-sequence-diagram.puml  04-complete-relationships.puml  04-component-diagram.puml  README.md
docs/: API.md  AUTHENTICATION.md  DEVELOPMENT.md  DOCKER.md  INDEX.md  README.md  backend-README.md  frontend-README.md
front/: .npmrc  Dockerfile  commands.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
front/src/app/: globals.css  layout.tsx  page.tsx
server/: .dockerignore  .gitignore  Dockerfile  activate.sh  alembic.ini  commands.md  create_data_for_my_user.py  init.sql  main.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 0b4836a5590a_работа_над_транзакциями_1.py  1321b1491c4a_правка_некоторыйх_отношений_1.py
server/api/endpoints/: __init__.py
server/api/endpoints/admin/: admin_endpoints.py
server/api/endpoints/auth/: auth_endpoints.py
server/api/endpoints/cards/: cards_endpoints.py
server/api/endpoints/transactions/: transactions_endpoints.py
server/api/endpoints/user/: user_endpoints.py
server/crud/: cards_crud.py  transactions_crud.py  users_crud.py
server/db/: session.py
server/db/models/: __init__.py  admin_model.py  cards_model.py  credits_model.py  transaction_model.py  user_model.py
server/schemas/: card_schema.py  transaction_schema.py  user_schema.py
(+55 files in other folders)
